<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="6dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/poster"
                android:layout_width="80dp"
                android:layout_height="100dp"
                android:src="@drawable/img"
                android:contentDescription="@string/gg"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="16dp"/>

            <TextView
                android:id="@+id/filmName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/film_name"
                android:textSize="20sp"
                android:layout_toEndOf="@id/poster"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"/>

            <TextView
                android:id="@+id/filmYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/film_year"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_below="@id/filmName"
                android:layout_toEndOf="@id/poster"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/filmDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/film_description"
                android:textSize="20sp"
                android:layout_below="@id/filmYear"
                android:layout_toEndOf="@id/poster"
                android:layout_marginTop="8dp"/>

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>
</LinearLayout>
